Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17444

llapi_open_by_fid leaks mount point fd

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Commit 7154244354e3 ("LU-16786 utils: Replace open call to WANT_FD") replaced get_root_path() with llapi_root_path_open(), but the later always opens or dup a fd and requires a close, so worklaods that use open by fid would very quickly run out of fd because of many many dup() calls on the mnt fd

            asmadeus Dominique Martinet
            asmadeus Dominique Martinet
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: